Feat: Submitted Assignment #1

--- a/BasicStatisticsUsingR.ipynb
+++ b/BasicStatisticsUsingR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -294,9 +294,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "a b c d \n",
-      "2 1 1 1 \n"
+      "function (x) \n",
+      "UseMethod(\"t\")\n",
+      "<bytecode: 0x7f98ed33bff0>\n",
+      "<environment: namespace:base>\n"
      ]
     }
    ],
@@ -306,26 +307,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\n",
-       "  a   b   c   d \n",
-       "0.4 0.2 0.2 0.2 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in sum(x): invalid 'type' (closure) of argument\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in sum(x): invalid 'type' (closure) of argument\nTraceback:\n",
+      "1. prop.table(t)"
+     ]
     }
    ],
    "source": [
     "prop.table(t) # Categorical Data "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
